fourth: show NaN stats for dropped nodes, improve table

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -18,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Load the edge list and create a directed Graph\n",
@@ -29,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Visualize a pandas DataFrame\n",
@@ -50,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Sort a pandas DataFrame by PageRank\n",
@@ -63,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Calculate the PageRank for the nodes in directed graph G\n",
@@ -74,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Display some PageRank statistics from a pandas DataFrame\n",
@@ -91,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def rank_error(df):\n",
@@ -101,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def pagerank_error(df):\n",
@@ -111,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def errors_of(i, df):\n",
@@ -122,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def display_errors(df):\n",
@@ -133,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Retrieve the nodes that have a certain in-degree and out-degree\n",
@@ -152,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Get the leaf nodes of a graph\n",
@@ -163,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Retrieve some statistics per node\n",
@@ -208,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "random.seed(420) # ensure output is deterministic"
@@ -224,14 +252,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "Gx = G.copy()\n",
     "Gx.remove_edges_from(random.sample(G.edges(), 20*G.number_of_edges()//100))\n",
     "pr = pagerank(Gx)\n",
     "visualize(pr, \"random_edges_removed\")\n",
-    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, pr, left_index=True, right_index=True, how='outer').sort_values(by='rank_base')\n",
     "display_errors(df)\n",
     "df = df.rename(columns={'pagerank':'pagerank_1','rank':'rank_1'})"
    ]
@@ -269,7 +299,7 @@
     "\n",
     "# Show some statistics about the new graph\n",
     "visualize(pr, \"random_leaves_removed\")\n",
-    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, pr, left_index=True, right_index=True, how='outer').sort_values(by='rank_base')\n",
     "display_errors(df)\n",
     "df = df.rename(columns={'pagerank':'pagerank_2','rank':'rank_2'})"
    ]
@@ -284,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Create a copy of the original graph\n",
@@ -304,7 +336,7 @@
     "\n",
     "# Show some statistics about the new graph\n",
     "visualize(pr)\n",
-    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, pr, left_index=True, right_index=True, how='outer').sort_values(by='rank_base')\n",
     "display_errors(df)\n",
     "df = df.rename(columns={'pagerank':'pagerank_3','rank':'rank_3'})"
    ]
@@ -312,10 +344,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "display(df.head(20), df.tail(20))"
+    "display(df.head(30), df.tail(30))"
    ]
   },
   {
@@ -328,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Create a copy of the original graph\n",
@@ -344,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": []
   }
