fourth: show communities

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -14,7 +14,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import community"
    ]
   },
   {
@@ -384,7 +385,25 @@
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Gx = G.copy().to_undirected()\n",
+    "\n",
+    "partition = community.best_partition(Gx)\n",
+    "\n",
+    "size = float(len(set(partition.values())))\n",
+    "pos = nx.spring_layout(Gx)\n",
+    "count = 0.\n",
+    "for com in set(partition.values()):\n",
+    "    count = count + 1.\n",
+    "    list_nodes = [nodes for nodes in partition.keys()\n",
+    "                                if partition[nodes] == com]\n",
+    "    nx.draw_networkx_nodes(Gx, pos, list_nodes, node_size = 20,\n",
+    "                                node_color = str(count / size))\n",
+    "\n",
+    "\n",
+    "nx.draw_networkx_edges(Gx,pos, alpha=0.5)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
