Extend node statistics

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -372,10 +372,15 @@
     "Gx = G.copy()\n",
     "\n",
     "stats = get_node_statistics(Gx)\n",
+    "pageranks = pagerank(Gx)\n",
     "\n",
-    "node = 34\n",
+    "node = 2426\n",
     "\n",
-    "display(stats.iloc[node-1])"
+    "display(stats.iloc[node-1])\n",
+    "display(pageranks[pageranks.index == str(node)])\n",
+    "\n",
+    "display(pageranks.head(10))\n",
+    "display(pageranks.tail(10))"
    ]
   },
   {
