fourth: community plots, proper log scale

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -48,7 +48,7 @@
     "    plt.show()\n",
     "    \n",
     "    print('Log scale')\n",
-    "    df['pagerank'].apply(np.log).plot.hist(bins=100)\n",
+    "    df['pagerank'].plot.hist(logy=True, bins=100)\n",
     "    plt.title('PageRank Distribution (log scale)')\n",
     "    plt.savefig(name + \"_log.png\", bbox_inches='tight')\n",
     "    plt.show()"
@@ -80,25 +80,6 @@
     "# Calculate the PageRank for the nodes in directed graph G\n",
     "def pagerank(G):\n",
     "    return sort_by_pagerank(pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'}).rename_axis('id'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Display some PageRank statistics from a pandas DataFrame\n",
-    "def display_rank(df):\n",
-    "    df = sort_by_pagerank(df)\n",
-    "    \n",
-    "    print(\"Top 10:\\n\")\n",
-    "    display(df.head(10))\n",
-    "    \n",
-    "    print(\"Lowest 10:\\n\")\n",
-    "    display(df.tail(10))"
    ]
   },
   {
@@ -409,6 +390,45 @@
     "nx.draw_networkx_edges(Gx,pos, alpha=0.5)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(partition, orient='index').rename(columns={0:'community'})\n",
+    "counts = df.community.value_counts()\n",
+    "display(counts.describe())\n",
+    "\n",
+    "counts = counts.value_counts().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Community size density plot\")\n",
+    "plt.savefig(\"community_size_density.png\", bbox_inches='tight')\n",
+    "counts.plot.kde()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Community size distribution')\n",
+    "counts.plot.pie(autopct='%.2f', figsize=(16,16))\n",
+    "plt.savefig(\"community_size_distribution.png\", bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -416,18 +436,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
   }
  },
  "nbformat": 4,
