--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -210,7 +210,9 @@
    "source": [
     "df = pagerank(G)\n",
     "visualize(df, \"base\")\n",
-    "df = df.rename(columns={'rank':'rank_base','pagerank':'pagerank_base'})"
+    "df = df.rename(columns={'rank':'rank_base','pagerank':'pagerank_base'})\n",
+    "\n",
+    "df.describe()"
    ]
   },
   {
@@ -345,7 +347,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -355,7 +357,7 @@
     "stats = get_node_statistics(Gx)\n",
     "pageranks = pagerank(Gx)\n",
     "\n",
-    "node = 2426\n",
+    "node = 246\n",
     "\n",
     "display(stats.iloc[node-1])\n",
     "display(pageranks[pageranks.index == str(node)])\n",
@@ -436,6 +438,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
