fourth: fix pie chart, make a pdf

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -411,7 +411,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "print(\"Community size density plot\")\n",
@@ -423,13 +425,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "print('Community size distribution')\n",
-    "counts.plot.pie(autopct='%.2f', figsize=(16,16))\n",
+    "counts.plot.pie(autopct='%.2f%%', figsize=(16,16))\n",
     "plt.savefig(\"community_size_distribution.png\", bbox_inches='tight')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "counts.plot.pie(autopct='%.2f%%', figsize=(32,32))\n",
+    "plt.savefig(\"community_size_distribution.pdf\", bbox_inches='tight')\n",
+    "plt.close()"
    ]
   }
  ],
