wiki: Remove filtering, make pagerank graph

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -50,36 +50,6 @@
    },
    "outputs": [],
    "source": [
-    "#start = min(G.edge_properties['start'])\n",
-    "#end = max(G.edge_properties['start'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#filters = {}\n",
-    "\n",
-    "#snapshots = 5\n",
-    "#delta = (end - start)/(snapshots-1)\n",
-    "#for t in [round(start+n*delta) for n in range(snapshots)]:\n",
-    "#    display(t)\n",
-    "#    filters[t] = []\n",
-    "#    i = 0\n",
-    "#    for e in G.edges():\n",
-    "#        if G.edge_properties['start'][e] <= t and G.edge_properties['end'][e] > t:\n",
-    "#            filters[t].append(i)\n",
-    "#        i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "graphs = []\n",
     "for name in os.listdir('data/snapshots/csv'):\n",
     "    graphs.append(load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=False))"
@@ -88,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -105,14 +73,16 @@
    },
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "#for g in graphs:\n",
     "    #g.vertex_properties['betweenness'], g.edge_properties['betweenness'] = betweenness(g) SLOW"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -124,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -140,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -154,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -178,12 +154,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for g in graphs:\n",
+    "#for g in graphs:\n",
     "    #g.vertex_properties['shortest_distances'] = shortest_distance(g) SLOW"
    ]
   },
@@ -197,6 +171,15 @@
    "source": [
     "#for g in graphs:\n",
     "    # TODO: similarity(g1, g2) or vertex_similarity(g1, g2) ??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_draw(graphs[0], vertex_fill_color=g.vertex_properties['pagerank'], output=\"pagerank_0.pdf\")"
    ]
   }
  ],
