wiki: Add timestamp, generate dataframe

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -16,6 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import os\n",
+    "from datetime import datetime\n",
     "from graph_tool.all import * "
    ]
   },
@@ -45,14 +45,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "graphs = []\n",
     "for name in os.listdir('data/snapshots/csv'):\n",
-    "    graphs.append(load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=False))"
+    "    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=False)\n",
+    "    timestamp = g.new_graph_property('python::object')\n",
+    "    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
+    "    g.graph_properties['timestamp'] = timestamp\n",
+    "    graphs.append(g)"
    ]
   },
   {
@@ -187,6 +189,33 @@
    "outputs": [],
    "source": [
     "#graph_draw(graphs[0], vertex_fill_color=g.vertex_properties['pagerank'], output=\"pagerank_0.pdf\") SLOW???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "for g in graphs:\n",
+    "    for k, v in g.graph_properties.items():\n",
+    "        v=v[g]\n",
+    "        if isinstance(v, dict):\n",
+    "            for sk, sv in v.items():\n",
+    "                sk = k+'_'+sk\n",
+    "                if not sk in d:\n",
+    "                    d[sk] = []\n",
+    "                    \n",
+    "                d[sk].append(sv)\n",
+    "        else:\n",
+    "            if not k in d:\n",
+    "                d[k] = []\n",
+    "                \n",
+    "            d[k].append(v)\n",
+    "        \n",
+    "df = pd.DataFrame(d)\n",
+    "display(df)"
    ]
   }
  ],
