wiki: Better table, sort by timestamp, trying new measures

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -54,7 +55,69 @@
     "    timestamp = g.new_graph_property('python::object')\n",
     "    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
     "    g.graph_properties['timestamp'] = timestamp\n",
-    "    graphs.append(g)"
+    "    graphs.append(g)\n",
+    "graphs = sorted(graphs, key=lambda g : g.graph_properties['timestamp'])\n",
+    "graphs.append(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for g in graphs:       \n",
+    "    vertices = g.new_graph_property('float')\n",
+    "    vertices[g] = len(g.get_vertices())\n",
+    "    g.graph_properties['vertices'] = vertices\n",
+    "    \n",
+    "    edges = g.new_graph_property('float')\n",
+    "    edges[g] = len(g.get_edges())\n",
+    "    g.graph_properties['edges'] = edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for g in graphs:\n",
+    "    degree_in = g.new_graph_property('float')\n",
+    "    degree_in_std = g.new_graph_property('float')\n",
+    "    degree_in[g], degree_in_std[g] = vertex_average(g, 'in')\n",
+    "    g.graph_properties['degree_in'] = degree_in\n",
+    "    g.graph_properties['degree_in_std'] = degree_in_std\n",
+    "    \n",
+    "    degree_out = g.new_graph_property('float')\n",
+    "    degree_out_std = g.new_graph_property('float')\n",
+    "    degree_out[g], degree_out_std[g] = vertex_average(g, 'out')\n",
+    "    g.graph_properties['degree_out'] = degree_out\n",
+    "    g.graph_properties['degree_out_std'] = degree_out_std\n",
+    "    \n",
+    "    degree_total = g.new_graph_property('float')\n",
+    "    degree_total_std = g.new_graph_property('float')\n",
+    "    degree_total[g], degree_total_std[g] = vertex_average(g, 'total')\n",
+    "    g.graph_properties['degree_total'] = degree_total\n",
+    "    g.graph_properties['degree_total_std'] = degree_total_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for g in graphs:\n",
+    "    clustering = g.new_graph_property('float')\n",
+    "    clustering_std = g.new_graph_property('float')\n",
+    "    clustering[g], clustering_std[g] = global_clustering(g)\n",
+    "    g.graph_properties['clustering'] = clustering\n",
+    "    g.graph_properties['clustering_std'] = clustering_std"
    ]
   },
   {
@@ -72,62 +135,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#for g in graphs:\n",
-    "    #g.vertex_properties['betweenness'], g.edge_properties['betweenness'] = betweenness(g) SLOW"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for g in graphs:\n",
     "    hits_eigen = g.new_graph_property('float')\n",
     "    hits_eigen[g], g.vertex_properties['hits_authority'], g.vertex_properties['hits_hub'] = hits(g)\n",
     "    g.graph_properties['hits_eigen'] = hits_eigen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for g in graphs:\n",
-    "    degree = g.new_graph_property('python::object')\n",
-    "    d = {}\n",
-    "    d['total'], d['total_std'] = vertex_average(g, 'total')\n",
-    "    d['in'], d['in_std'] = vertex_average(g, 'in')\n",
-    "    d['out'], d['out_std'] = vertex_average(g, 'out')\n",
-    "    degree[g] = d\n",
-    "    g.graph_properties['degree'] = degree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for g in graphs:\n",
-    "    clustering_coef = g.new_graph_property('python::object')\n",
-    "    c = {}\n",
-    "    c['value'], c['std'] = global_clustering(g)\n",
-    "    clustering_coef[g] = c\n",
-    "    g.graph_properties['clustering'] = clustering_coef"
    ]
   },
   {
@@ -159,13 +173,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for g in graphs:\n",
+    "#    print('-')\n",
+    "#    g.vertex_properties['betweenness'], g.edge_properties['betweenness'] = betweenness(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    " #   graphs[1].vertex_properties['closeness'] = closeness(graphs[1])\n",
     "#for g in graphs:\n",
-    "    #g.vertex_properties['shortest_distances'] = shortest_distance(g) SLOW"
+    "  #  print('-')\n",
+    "#    g.vertex_properties['closeness'] = closeness(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (i,g) in enumerate(graphs):\n",
+    "    print(i)\n",
+    "#    g.remove_vertex(find_vertex(g, 'total', 0)) Also slow ???????\n",
+    "    \n",
+    "#    vertices_secluded = g.new_graph_property('float')\n",
+    "#    vertices_secluded[g] = len(g.get_vertices()) - vertices[g]\n",
+    "#    g.graph_properties['vertices_secluded'] = vertices_secluded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (i,g) in enumerate(graphs):\n",
+    "    print(i)\n",
+    "    #g.vertex_properties['shortest_distances'] = shortest_distance(g)"
    ]
   },
   {
@@ -199,24 +252,26 @@
    "source": [
     "d = {}\n",
     "for g in graphs:\n",
-    "    for k, v in g.graph_properties.items():\n",
-    "        v=v[g]\n",
-    "        if isinstance(v, dict):\n",
-    "            for sk, sv in v.items():\n",
-    "                sk = k+'_'+sk\n",
-    "                if not sk in d:\n",
-    "                    d[sk] = []\n",
-    "                    \n",
-    "                d[sk].append(sv)\n",
-    "        else:\n",
-    "            if not k in d:\n",
-    "                d[k] = []\n",
-    "                \n",
-    "            d[k].append(v)\n",
+    "    for (p, _) in g.graph_properties.items():\n",
+    "        d[p] = [] \n",
     "        \n",
-    "df = pd.DataFrame(d)\n",
+    "for g in graphs:\n",
+    "    for p in d:\n",
+    "        if p in g.graph_properties:\n",
+    "            d[p].append(g.graph_properties[p])\n",
+    "        else:\n",
+    "            d[p].append(np.nan)\n",
+    "        \n",
+    "df = pd.DataFrame(d).sort_values('timestamp').reset_index(drop=True)\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
