wiki: Don't use int vertices

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "#G = load_graph_from_csv(\"data/data.txt\", directed=True, eprop_types=['int', 'int'], eprop_names=['start', 'end'], string_vals=False, csv_options={'delimiter':' '})\n",
+    "#G = load_graph_from_csv(\"data/data.txt\", directed=True, eprop_types=['int', 'int'], eprop_names=['start', 'end'], string_vals=True, csv_options={'delimiter':' '})\n",
     "#G.save('data/original.gt')"
    ]
   },
@@ -46,12 +46,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "graphs = []\n",
     "for name in os.listdir('data/snapshots/csv'):\n",
-    "    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=False)\n",
+    "    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=True)\n",
     "    timestamp = g.new_graph_property('python::object')\n",
     "    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
     "    g.graph_properties['timestamp'] = timestamp\n",
@@ -64,6 +66,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -109,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -135,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for g in graphs:\n",
@@ -173,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for g in graphs:\n",
@@ -269,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
