wiki: Generate snapshot binaries also

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -23,41 +23,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#### Uncomment this block when running code for first time(and comment it back later)\n",
+    "#####################################################################################\n",
     "#G = load_graph_from_csv(\"data/data.txt\", directed=True, eprop_types=['int', 'int'], eprop_names=['start', 'end'], string_vals=True, csv_options={'delimiter':' '})\n",
-    "#G.save('data/original.gt')"
+    "#G.save('data/original.gt')\n",
+    "\n",
+    "#graphs = []\n",
+    "#for name in os.listdir('data/snapshots/csv'):\n",
+    "#    if not name.endswith('.csv'):\n",
+    "#        continue\n",
+    "#        \n",
+    "#    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=True)\n",
+    "#    timestamp = g.new_graph_property('python::object')\n",
+    "#    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
+    "#    g.graph_properties['timestamp'] = timestamp\n",
+    "#    graphs.append(g)\n",
+    "    \n",
+    "#    g.save(os.path.join('data/snapshots/gt', name + '.gt'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "G = load_graph('data/original.gt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "G = load_graph('data/original.gt')\n",
+    "\n",
     "graphs = []\n",
-    "for name in os.listdir('data/snapshots/csv'):\n",
-    "    g = load_graph_from_csv(os.path.join('data/snapshots/csv', name), directed=True, string_vals=True)\n",
-    "    timestamp = g.new_graph_property('python::object')\n",
-    "    timestamp[g] = datetime.fromtimestamp(int(name[:-4]))\n",
-    "    g.graph_properties['timestamp'] = timestamp\n",
-    "    graphs.append(g)\n",
+    "for name in os.listdir('data/snapshots/gt'):\n",
+    "    if not name.endswith('.gt'):\n",
+    "        continue\n",
+    "        \n",
+    "    graphs.append(load_graph(os.path.join('data/snapshots/gt', name)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "graphs = sorted(graphs, key=lambda g : g.graph_properties['timestamp'])\n",
     "graphs.append(G)"
    ]
@@ -112,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for g in graphs:\n",
